outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval1050482876992684234_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as nodes are visited, and balances these factors with a fixed weight of 0.7 for immediate distance and 0.3 for the combined proximity and potential distance terms.}
                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance as nodes are visited, and balances these factors with a fixed weight of 0.7 for immediate distance and 0.3 for the combined proximity and potential distance terms.}
                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
